// 说明使用的是proto3语法
syntax = "proto3";

// 这部分的内容是关于最后生成的go文件是处在哪个目录哪个包中
// 。代表在当前目录生成，service代表了生成的go文件的包名是service
option  go_package = ".;service";

// 我们需要定义一个服务，在这个服务中要有一个方法
// 这个方法可以接收客户端的参数，再返回服务端的响应
// service关键字相当于方法
service  SayHello {
  rpc SayHello(HelloRequest) returns (HelloResponse){}
}

// message关键字相当于结构体
// 比较特别的是变量后面的“赋值”，注意，这里并不是赋值，
// 而是在定义这个变量在message中的位置
message HelloRequest {
  string requestName = 1;
}

message HelloResponse {
  string responseMsg = 1;
}
